tests/baselines/reference/esDecoratorsMetadata4(target=es2022).errors.txt
/foo.ts(22,22): error TS2345: Argument of type 'DecoratorMetadataObject | null' is not assignable to parameter of type 'WeakKey'.
  Type 'null' is not assignable to type 'WeakKey'.
/foo.ts(23,22): error TS2345: Argument of type 'DecoratorMetadataObject | null' is not assignable to parameter of type 'WeakKey'.


==== /foo.ts (2 errors) ====
    const PRIVATE_METADATA = new WeakMap();
    
    function meta(key: string, value: string) {
        return (_, context) => {
            let metadata = PRIVATE_METADATA.get(context.metadata);
    
            if (!metadata) {
                metadata = {};
                PRIVATE_METADATA.set(context.metadata, metadata);
            }
    
            metadata[key] = value;
        };
    }
    
    @meta('a', 'x')
    class C {
        @meta('b', 'y')
        m() { }
    }
    
    PRIVATE_METADATA.get(C[Symbol.metadata]).a; // 'x'
                         ~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'DecoratorMetadataObject | null' is not assignable to parameter of type 'WeakKey'.
!!! error TS2345:   Type 'null' is not assignable to type 'WeakKey'.
    PRIVATE_METADATA.get(C[Symbol.metadata]).b; // 'y'
                         ~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type 'DecoratorMetadataObject | null' is not assignable to parameter of type 'WeakKey'.
    